Add legacy javascript code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "dist",
     "baseUrl": "src/",
     "sourceMap": true,
+    "allowJs": true,
     "strict": true,
     "experimentalDecorators": true,
     "noImplicitReturns": true,
