--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@types/chai": "^4.1.6",
-    "@types/lodash": ">=4.17.19",
+    "@types/lodash": "^4.14.165",
     "@types/mocha": "^5.2.5",
     "@types/node": "^13.13.1",
     "@types/screeps": "^3.1.0",
@@ -49,7 +49,7 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "lodash": ">=4.17.19",
+    "lodash": "^4.17.20",
     "mocha": "^5.2.0",
     "prettier": "^2.0.4",
     "rollup": "^2.34.0",
@@ -60,7 +60,7 @@
     "sinon-chai": "^3.2.0",
     "ts-node": "^8.8.2",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.8.3"
+    "typescript": "^4.1.2"
   },
   "dependencies": {
     "source-map": "~0.6.1"
